# SPQR-NAO-2013

./: .gitignore  README.md
Config/PTracking/: agent.cfg  parameters.cfg
Config/Scenes/: FiveRobots.ros2  (+1 more)
PTracking/: README.txt  make_release.sh
PTracking/src/: CMakeLists.txt  Doxyfile
PTracking/src/Core/Clusterizer/: Clusterizer.h
PTracking/src/Core/Clusterizer/KClusterizer/: KClusterizer.cpp
PTracking/src/Core/Clusterizer/QTClusterizer/: QTClusterizer.cpp  QTClusterizer.h
PTracking/src/Core/Filters/: MultiObjectParticleFilter.cpp  MultiObjectParticleFilter.h  ObjectParticleFilter.cpp  ObjectParticleFilter.h  ObjectParticleFilterMultiAgent.cpp  ObjectParticleFilterMultiAgent.h  ObjectSensorReading.cpp  ObjectSensorReadingMultiAgent.cpp  ObjectSensorReadingMultiAgent.h
PTracking/src/Core/Processors/: MultiAgentProcessor.cpp  MultiTrackerProcessor.cpp  MultiTrackerProcessor.h  Processor.cpp  Processor.h
PTracking/src/Core/SensorMaps/: BasicSensorMap.cpp  BasicSensorMap.h
PTracking/src/Core/SensorModels/: BasicSensorModel.cpp
PTracking/src/Core/Sensors/: BasicSensor.cpp  BasicSensor.h
PTracking/src/Manfield/: manifoldprocessor.cpp  sensorfilter.cpp  sensorfilter.h  sensormodel.h
PTracking/src/Manfield/configfile/: configfile.cpp  configfile.h
PTracking/src/Manfield/filters/: particlefilter.cpp
PTracking/src/Manfield/filters/gmlocalizer/: localizer.cpp  structs.cpp  structs.h
PTracking/src/Manfield/utils/: debugutils.h
PTracking/src/Utils/: AgentPacket.h  Point2f.h  Point2of.h  PointWithVelocity.h  PolarPoint.h  PriorityBuffer.h  Utils.h
(+36 files in other folders)
